remote/argocd/dd-next-runtime/dd-agent-worker-broker.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dd-agent-worker-broker
  namespace: default
  labels:
    app: dd-agent-worker-broker
spec:
  podSelector:
    matchLabels:
      app: dd-agent-worker-broker
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dd-remote-gateway
        - podSelector:
            matchLabels:
              app: dd-remote-rest-api
        - podSelector:
            matchLabels:
              app: dd-runtime-config
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 8098
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: messaging
          podSelector:
            matchLabels:
              app: dd-nats
      ports:
        - protocol: TCP
          port: 4222
    - to:
        - podSelector:
            matchLabels:
              app: dd-runtime-config
      ports:
        - protocol: TCP
          port: 8110
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: thread-pod
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
